[Offline pages] Make all net error codes retriable.

BUG=710528

Review-Url: https://codereview.chromium.org/2808313002
Cr-Commit-Position: refs/heads/master@{#463683}

Former-commit-id: e57139b41ebdda733b1dd9159738381fb941fd03