chrome/browser/android/offline_pages/background_loader_offliner.cc
@@ -255,32 +255,6 @@ void BackgroundLoaderOffliner::DidFinishNavigation(
     RecordErrorCauseUMA(pending_request_->client_id(),
                         navigation_handle->GetNetErrorCode());
     switch (navigation_handle->GetNetErrorCode()) {
-      case net::ERR_ACCESS_DENIED:
-      case net::ERR_ADDRESS_INVALID:
-      case net::ERR_ADDRESS_UNREACHABLE:
-      case net::ERR_CERT_COMMON_NAME_INVALID:
-      case net::ERR_CERT_AUTHORITY_INVALID:
-      case net::ERR_CERT_CONTAINS_ERRORS:
-      case net::ERR_CERT_INVALID:
-      case net::ERR_CONNECTION_FAILED:
-      case net::ERR_DISALLOWED_URL_SCHEME:
-      case net::ERR_DNS_SERVER_FAILED:
-      case net::ERR_FILE_NOT_FOUND:
-      case net::ERR_FILE_PATH_TOO_LONG:
-      case net::ERR_FILE_TOO_BIG:
-      case net::ERR_FILE_VIRUS_INFECTED:
-      case net::ERR_INVALID_HANDLE:
-      case net::ERR_INVALID_RESPONSE:
-      case net::ERR_INVALID_URL:
-      case net::ERR_MSG_TOO_BIG:
-      case net::ERR_NAME_NOT_RESOLVED:
-      case net::ERR_NAME_RESOLUTION_FAILED:
-      case net::ERR_SSL_PROTOCOL_ERROR:
-      case net::ERR_SSL_CLIENT_AUTH_SIGNATURE_FAILED:
-      case net::ERR_SSL_SERVER_CERT_BAD_FORMAT:
-      case net::ERR_UNKNOWN_URL_SCHEME:
-        page_load_state_ = NONRETRIABLE;
-        break;
       case net::ERR_INTERNET_DISCONNECTED:
         page_load_state_ = DELAY_RETRY;
         break;
